--- a/WebContent/admin/produto.xhtml
+++ b/WebContent/admin/produto.xhtml
@@ -31,7 +31,7 @@
 			    </p:column>
 				<p:column style="width: 80px;">
 					<f:facet name="header">Acoes</f:facet>
-					<p:button outcome="produtoVisualizar.xhtml"
+					<p:button outcome="../produtoVisualizar.xhtml"
 						icon="ui-icon-circle-zoomin" title="Visualizar Produto">
 						<f:param name="id" value="#{produto.id}" />
 					</p:button>
