--- a/WebContent/produto.xhtml
+++ b/WebContent/produto.xhtml
@@ -12,7 +12,7 @@
 <h:body>
 
 	<h1>Pagina de Produtos!</h1>
-
+	<p:button outcome="carrinhoVisualizar.xhtml"/>
 	<h:form id="frmTabela">
 		<p:dataTable id="tabela" value="#{produtoListaController.produtos}"
 			var="produto">
