--- a/WebContent/produtoVisualizar.xhtml
+++ b/WebContent/produtoVisualizar.xhtml
@@ -11,7 +11,7 @@
 </h:head>
 <h:body>
 	<h1>Produto</h1>
-
+	<p:button outcome="carrinhoVisualizar.xhtml"/>
 	<h:form>
 		<h:panelGrid columns="2" style="margin-bottom:10px">
 			<h:outputLabel value="Nome: " />
