--- a/WebContent/carrinhoVisualizar.xhtml
+++ b/WebContent/carrinhoVisualizar.xhtml
@@ -1,73 +1,69 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition template="includes/template.xhtml"
+	xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core">
-<h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
-	<title><ui:insert name="titulo">FAE</ui:insert></title>
-	<link type="text/css" rel="stylesheet" href="/crud/styles/default.css" />
-</h:head>
-<h:body>
-	<h1>Carrinho</h1>
 
+	<ui:define name="corpo">
+		<h:form>
+			<h1>Carrinho</h1>
+			<h:outputText value="Valor Total da Compra: " />
+			<h:outputText value="#{carrinhoCompraController.valorTotal}" />
+			<p:growl id="msgs" showDetail="true" />
 
+			<p:dataTable id="carrinhoItem" var="produto"
+				value="#{carrinhoCompraController.listItemCarrinho}" editable="true"
+				style="margin-bottom:20px">
+				<f:facet name="header">Itens do Carrinho</f:facet>
 
-	<h:form>
-		<h:outputText value="Valor Total da Compra: " />
-		<h:outputText value="#{carrinhoCompraController.valorTotal}" />
-		<p:growl id="msgs" showDetail="true" />
+				<p:column headerText="id">
+					<h:outputText value="#{produto.key}" />
+				</p:column>
 
-		<p:dataTable id="carrinhoItem" var="produto"
-			value="#{carrinhoCompraController.listItemCarrinho}" editable="true"
-			style="margin-bottom:20px">
-			<f:facet name="header">Itens do Carrinho</f:facet>
+				<p:column headerText="nome">
+					<h:outputText value="#{produto.value.produto.nome}" />
+				</p:column>
 
-			<p:column headerText="id">
-				<h:outputText value="#{produto.key}" />
-			</p:column>
+				<p:column headerText="quandidade">
+					<h:outputText value="#{produto.value.quantidade}" />
+				</p:column>
 
-			<p:column headerText="nome">
-				<h:outputText value="#{produto.value.produto.nome}" />
-			</p:column>
+				<p:column headerText="valor unitario">
+					<h:outputText value="#{produto.value.produto.valor}" />
+				</p:column>
 
-			<p:column headerText="quandidade">
-				<h:outputText value="#{produto.value.quantidade}" />
-			</p:column>
+				<p:column headerText="valor total">
+					<h:outputText value="#{produto.value.valorTotal}" />
+				</p:column>
 
-			<p:column headerText="valor unitario">
-				<h:outputText value="#{produto.value.produto.valor}" />
-			</p:column>
-
-			<p:column headerText="valor total">
-				<h:outputText value="#{produto.value.valorTotal}" />
-			</p:column>
-
-			<p:column headerText="Acoes">
-				<p:commandButton icon="ui-icon-plus" title="Inserir mais um Produto"
-					ajax="true" update="@form"
-					action="#{carrinhoCompraController.put}">
-					<f:setPropertyActionListener target="#{carrinhoCompraController.produto.id}"
-						value="#{produto.value.produto.id}" />
-				</p:commandButton>
-				<p:spacer width="10" />
-				<p:commandButton icon="ui-icon-minus" title="Remover um Produto"
-					ajax="true" update="@form"
-					action="#{carrinhoCompraController.remove}">
-					<f:setPropertyActionListener target="#{carrinhoCompraController.produto.id}"
-						value="#{produto.value.produto.id}" />
-				</p:commandButton>
-				<p:spacer width="10" />
-				<p:commandButton icon="ui-icon-trash" title="Remover Item"
-					ajax="true" update="@form"
-					action="#{carrinhoCompraController.removeItem}">
-					<f:setPropertyActionListener target="#{carrinhoCompraController.produto.id}"
-						value="#{produto.value.produto.id}" />
-				</p:commandButton>
-			</p:column>
-		</p:dataTable>
-	</h:form>
-
-</h:body>
-</html>
+				<p:column headerText="Acoes">
+					<p:commandButton icon="ui-icon-plus"
+						title="Inserir mais um Produto" ajax="true" update="@form"
+						action="#{carrinhoCompraController.put}">
+						<f:setPropertyActionListener
+							target="#{carrinhoCompraController.produto.id}"
+							value="#{produto.value.produto.id}" />
+					</p:commandButton>
+					<p:spacer width="10" />
+					<p:commandButton icon="ui-icon-minus" title="Remover um Produto"
+						ajax="true" update="@form"
+						action="#{carrinhoCompraController.remove}">
+						<f:setPropertyActionListener
+							target="#{carrinhoCompraController.produto.id}"
+							value="#{produto.value.produto.id}" />
+					</p:commandButton>
+					<p:spacer width="10" />
+					<p:commandButton icon="ui-icon-trash" title="Remover Item"
+						ajax="true" update="@form"
+						action="#{carrinhoCompraController.removeItem}">
+						<f:setPropertyActionListener
+							target="#{carrinhoCompraController.produto.id}"
+							value="#{produto.value.produto.id}" />
+					</p:commandButton>
+				</p:column>
+			</p:dataTable>
+		</h:form>
+	</ui:define>
+</ui:composition>
