--- a/WebContent/produto.xhtml
+++ b/WebContent/produto.xhtml
@@ -19,6 +19,10 @@
 					<f:facet name="header">Valor</f:facet>
 					#{produto.valor}  
 			    </p:column>
+			    	<p:column>
+					<f:facet name="header">Categoria</f:facet>
+					#{produto.categoria.nome}  
+			    </p:column>
 				<p:column style="width: 80px;">
 					<f:facet name="header">Acoes</f:facet>
 					<p:button outcome="produtoVisualizar.xhtml"
